<resources>
        <string name="app_name">AroundMe</string>
        <string name="ak_login_protocol_scheme">ak228948044193904</string>
        <string name="ACCOUNT_KIT_CLIENT_TOKEN">252600cd3f5157efba9f910a28bcf63f</string>
        <string name="facebook_app_id">228948044193904</string>
        <string name="google_api_key">AIzaSyA2ICa4zHKTTlwP1FTZo4d0ePg5jJHMrN8</string>
        <string name="play_market_open_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAixQ311NiNuKmKP7KTioBpkWnEjI+5m8lEYe1dNLAUZFTGPaecZGmiX997PhR/nUaW21BiqMPXbE0H9F/VhTBh5fu/DOrnkyK31XmjuQEAmJf/hT5OF6a5skg/3pO/yUwYWGcuV8yLPihkZ/B3opAeZlk+fP6tBAudUoV9legaUKJrklsLJLO81d87eRKlwYLBBF4wEBtDme2yAGINJGqhyHJ/2nH/eouOoctFNVae1jQg4+AGDxR4LouQmexfxXJiYV3FXRyJx31GEaFx3kit2ID6Gbk9bMaoUfJ6wzzScci0FI5WyDQU58d5DRsFmesdqzQIorzv1NcrfJ+ZDEawQIDAQAB</string>
        <string name="banner_ad_unit_id">ca-app-pub-5840195022168499/4601645762</string>
        <string name="fb_audiance_visitor">934456323255154_1113012905399494</string>
        <string name="fb_audiance_travel">934456323255154_1113012565399528</string>
        <string name="fb_audiance_private">934456323255154_1113012565399528</string>
        <string name="drawer_item_visitors">Visitors</string>
        <string name="drawer_item_around_me">Around Me</string>
        <string name="drawer_item_hot_or_not">Hot or Not</string>
        <string name="drawer_item_messaging">Messaging</string>
        <string name="drawer_item_vip">Profile</string>
        <string name="splash_loading">Loading…</string>
        <string name="signup_male">Male</string>
        <string name="signup_female">Female</string>
        <string name="signup_gender">Select Gender</string>
        <string name="signup_gender_explzin">Sorry, but you must specify your gender (If you are Male or Female)</string>
        <string name="loc_updati">Updating location…</string>
        <string name="loc_cant">Can\'t connect. Verify your internet</string>
        <string name="loc_intererror">Internal error. Try Again Later</string>
        <string name="loc_no_int">No internet. Connect and try again</string>
        <string name="lost_2">We are lost click on save to update location</string>
        <string name="location_switch">Switch on Location Services</string>
        <string name="location_explain">Location Services must be turned on to complete this action. Also please take note that if on a very weak network connection,  such as \'E\' Mobile Data or \'Very weak Wifi-Connections\' it may take even 15 mins to load. If on a very weak network connection as stated above, location returned to application may be null or nothing and cause the application to crash.</string>
        <string name="location_on">OK, Open Settings</string>
        <string name="location_cancel">Cancel</string>
        <string name="location_loading">Loading…</string>
        <string name="update_updating">Updating…</string>
        <string name="prof.age">  Years</string>
        <string name="more_info">For more information see our</string>
        <string name="signup_accept">By clicking the \"create account\" button, you are accepting our </string>
        <string name="terms"><![CDATA[<a href=\'http://www.angopapo.com/terms\'> Terms of use </a>]]></string>
        <string name="privacy"><![CDATA[<a href=\'http://www.angopapo.com/privacy\'> Privacy policy </a>]]></string>
        <string name="google_api">http://maps.google.com</string>
        <string name="and">and our</string>
        <string name="terms_title2">Terms of use</string>
        <string name="privacy_title2">Privacy Policy</string>
        <string name="save_start">Save and start</string>
        <string name="save_title">Save your current location to begin using AroundMe.</string>
        <string name="update_city">CURRENT CITY NAME</string>
        <string name="loac_cure">CURRENT LOCATION</string>
        <string name="lo_turon">PLEASE TURN ON LOCATION</string>
        <string name="loc_turn">TURN ON LOCATION</string>
        <string name="save_loca_privacy">Read more about your privacy</string>
        <string name="login_plost">Password lost?</string>
        <string name="back_to_phone_and_facebook_login">Signup with Email</string>
        <string name="go_to_the_store">Go to the store</string>
        <string name="cost_100_credits">Costs 100 credits but also available for VIP Subscriptions</string>
        <string name="private_mode">First upgrade and then you will be able to set your profile private or public when you want</string>
        <string name="first_activete">First active and then you will be able to travel to any city in the world</string>
        <string name="first_activete1">First active and then you will be able to see every one that visited your profile</string>
        <string name="you_have_not">You have not activated passport yet</string>
        <string name="you_have_not2">You have not activated private yet</string>
        <string name="you_have_not1">You have not activated visitors yet</string>
        <string name="vip_activte">Activate</string>
        <string name="testar">TEST</string>
        <string name="login_email">Username</string>
        <string name="login_password">Password</string>
        <string name="SignUp_name">Full Name</string>
        <string name="SignUp_username">Username</string>
        <string name="SignUp_email">Your Email</string>
        <string name="SignUp_password">Password</string>
        <string name="SignUp_create">Create Account</string>
        <string name="SignUp_alredy">Already a registered? Login</string>
        <string name="forgot_lost">PASSWORD LOST?</string>
        <string name="forgot_dont">Don\'t worry, just enter the email you used to register truth AroundMe</string>
        <string name="forgot_reset">Reset Password</string>
        <string name="forgot_remember">Remember your password? Login</string>
        <string name="login_teken">Email already taken, choose an other</string>
        <string name="login_cant">Can\'t connect. Verify your Data Plan or Wifi</string>
        <string name="login_error">Internal error. Try Again Later</string>
        <string name="login_auth2">Authenticating…</string>
        <string name="login_inc">Username or password incorrect</string>
        <string name="login_incor">Incorrect Username, Please verify</string>
        <string name="login_verify">VERIFY</string>
        <string name="login_inco_email">Incorrect Email address or Username, Please Verify</string>
        <string name="login_inc_veri">VERIFY</string>
        <string name="login_not_fou">Email not found address or Username, Please Verify</string>
        <string name="login_verify2">VERIFY</string>
        <string name="login_request">Request time out. Try Again Later</string>
        <string name="login_ok">OK</string>
        <string name="login_cont_con">Can\'t connect. Verify your Data Plan or Wifi</string>
        <string name="login_ok2">OK</string>
        <string name="login_intern">Internal error. Try Again Later</string>
        <string name="login_no_int">No internet connection. Please Connect</string>
        <string name="login_press_again">Press back again to exit</string>
        <string name="login_missi">Missing same fields. Please verify</string>
        <string name="login_email_at">At least 3 characters</string>
        <string name="login_pass_at">At least 6 alphanumeric characters</string>
        <string name="signup_creat">Creating Account…</string>
        <string name="signup_yh">"Yh, i'm using AroundMe it's great "</string>
        <string name="signup_userta">Username  already taken, choose an other</string>
        <string name="signup_request">Request time out. Try Again Later</string>
        <string name="signup_pass_atl">At least 6 alphanumeric characters</string>
        <string name="signup_valid_email">Enter a valid email address</string>
        <string name="signup_user_at">At least 3 characters</string>
        <string name="signup_name_at">At least 3 characters</string>
        <string name="signup_request_t">Request time out. Try Again Later</string>
        <string name="forgot_veri">Verifying your email…</string>
        <string name="forgot_send">Email send. Congratulations</string>
        <string name="forgot_check">Check your email inbox to reset the your account password</string>
        <string name="forgot_em_not">"Email not Found "</string>
        <string name="forgot_email_wasnt">Your email wasn\'t found in our server, please verify or create a new account</string>
        <string name="forgot_register">REGISTER</string>
        <string name="forgot_valid_email">Enter a valid email address</string>
        <string name="login_login">LOGIN</string>
        <string name="forgot_login">Login</string>
        <string name="around">Around</string>
        <string name="me">Me</string>
        <string name="status">Marital status:</string>
        <string name="profile_title">My profile</string>
        <string name="Main_vip">VIP Feature</string>
        <string name="Main_vipdo">Do you want to buy VIP Member?</string>
        <string name="Main_vipyes">Yes</string>
        <string name="Main_vipno">No</string>
        <string name="profile_femele">Woman</string>
        <string name="profile_male">Man</string>
        <string name="profile_not_defined">Not defined</string>
        <string name="country">Country:</string>
        <string name="living_city">Living City:</string>
        <string name="basic_information">Basic information</string>
        <string name="choose_country">Choose your country</string>
        <string name="choose_your_country">Choose your country</string>
        <string name="gender_choose">Choose your gender</string>
        <string name="stauts_choose">Select your status</string>
        <string name="sexual_ori">Select your sexual orientation</string>
        <string name="looking">"I'm looking for "</string>
        <string name="male">Male</string>
        <string name="female">Female</string>
        <string name="other">Other</string>
        <string name="gender">Gender:</string>
        <string name="did_not">You didn\'t selected your gender</string>
        <string name="wait_int">Internet connection is not available</string>
        <string name="wait_wait">Wait for internet connection</string>
        <string name="Match_years">" Years"</string>
        <string name="offline_mode">No internet connection</string>
        <string name="match_looking">Looking for people around you…</string>
        <string name="match_travel_now">TRAVEL NOW</string>
        <string name="usernear_update_loc">UPDATE LOCATION</string>
        <string name="meetings_usernot">Sorry, no user was found. This may happen when your location is outdated or when there is no one in your area. Update your location or use travel now</string>
        <string name="message_no_messgae">You don\'t have any message yet! To begin conversations with people, first find some one Around you</string>
        <string name="message_loading_messgae">Loading conversations…</string>
        <string name="orientation_sex">Orientation:</string>
        <string name="choose_your_orientation">Choose your orientation</string>
        <string name="choose_your_status">Choose your status</string>
        <string name="choose_your_preference">Choose your preference</string>
        <string name="interested_in">Interested in:</string>
        <string name="tell_us_about_you_you_are_free_to_say_any_this_you_want_but_try_to_be_short">Tell us about you, you are free to say any this you want, but try to be short</string>
        <string name="birthday">Birthday</string>
        <string name="how_old_are_you">How old are you ?</string>
        <string name="choose_your_gender">Choose your gender</string>
        <string name="location">LOCATION</string>
        <string name="insterest_and_sexuality">Insterest and Sexuality</string>
</resources>