<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/update_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <include layout="@layout/toolbar" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.letsnurture.ln_202.coordinatorlayoutpart1.ScrollingActivity"
        android:layout_below="@+id/linearLayout16"
        android:layout_above="@+id/linearLayout17"
        android:paddingTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f4"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:text="@string/basic_information"
                android:textAllCaps="true"
                android:textColor="#868686"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#ACACAC"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fullname"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_marginTop="7dp" />
                <com.angopapo.aroundme.customfonts.MyEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:textColorHint="@color/gray2"
                    android:textColor="@color/black"
                    android:hint="Maravilho Singa"
                    android:layout_marginTop="2dp"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/name"
                    android:textStyle="bold"
                    android:inputType="text" />
            </LinearLayout>




            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#ACACAC"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="About me"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_marginTop="7dp" />
                <com.angopapo.aroundme.customfonts.MyEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="#00000000"
                    android:textColorHint="@color/gray2"
                    android:textColor="@color/black"
                    android:hint="@string/tell_us_about_you_you_are_free_to_say_any_this_you_want_but_try_to_be_short"
                    android:layout_marginTop="2dp"
                    android:textSize="15sp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/desc"
                    android:inputType="text|textMultiLine"
                    android:maxLines="2" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#ACACAC"/>

            <LinearLayout
                android:id="@+id/birth"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_marginTop="7dp" />


                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:id="@+id/birth2"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:textColor="@color/black"
                    android:hint="@string/how_old_are_you"
                    android:textColorHint="@color/gray2"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:inputType="date"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginLeft="4dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#ACACAC"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:onClick="GenderChooser">
                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_marginTop="7dp"
                    android:onClick="GenderChooser"
                    android:layout_marginRight="10dp" />

                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:textColor="@color/black"
                    android:hint="@string/choose_your_gender"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:id="@+id/gender"
                    android:inputType="date"
                    android:onClick="GenderChooser"
                    android:textColorHint="@color/gray2"
                    android:padding="10dp" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#ACACAC"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f4"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:text="@string/location"
                android:textAllCaps="true"
                android:textColor="#868686"
                android:textSize="15sp"
                android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ACACAC"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:onClick="CountryListView">
        <com.angopapo.aroundme.customfonts.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_marginTop="7dp"
            android:onClick="CountryListView" />
        <com.angopapo.aroundme.customfonts.MyTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="#00000000"
            android:textColorHint="@color/gray2"
            android:textColor="@color/black"
            android:hint="@string/choose_your_country"
            android:layout_marginTop="2dp"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:id="@+id/country"
            android:onClick="CountryListView"
            android:inputType="text" />
    </LinearLayout>




    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ACACAC"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <com.angopapo.aroundme.customfonts.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/living_city"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_marginTop="7dp" />
        <com.angopapo.aroundme.customfonts.MyEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="#00000000"
            android:textColorHint="@color/gray2"
            android:textColor="@color/black"
            android:hint="Coralville"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:id="@+id/living"
            android:textStyle="bold"
            android:inputType="text|textAutoCorrect" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ACACAC"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f4"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:text="@string/insterest_and_sexuality"
                android:textAllCaps="true"
                android:textColor="#868686"
                android:textSize="15sp"
                android:textStyle="bold" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ACACAC"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#ACACAC"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:onClick="SexualityListView">
                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interested_in"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_marginTop="7dp"
                    android:onClick="SexualityListView" />
                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:textColorHint="@color/gray2"
                    android:textColor="@color/black"
                    android:hint="@string/choose_your_preference"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/sexuality"
                    android:onClick="SexualityListView"
                    android:inputType="text" />
            </LinearLayout>




            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#ACACAC"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:onClick="StatusListView">
                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_marginTop="7dp"
                    android:onClick="StatusListView" />
                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:textColorHint="@color/gray2"
                    android:textColor="@color/black"
                    android:hint="@string/choose_your_status"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/status"
                    android:onClick="StatusListView"
                    android:inputType="text" />
            </LinearLayout>




            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#ACACAC"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:onClick="OrientationListView">
                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orientation_sex"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_marginTop="7dp"
                    android:onClick="OrientationListView" />
                <com.angopapo.aroundme.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:textColorHint="@color/gray2"
                    android:textColor="@color/black"
                    android:hint="@string/choose_your_orientation"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/orientation"
                    android:onClick="OrientationListView"
                    android:inputType="text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#ACACAC"/>


</LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
