<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context="com.angopapo.aroundme.Messaging.MessageListActivity"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/alizarin"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayout22">

        <ListView
            android:id="@+id/message_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_above="@+id/ad_banner"/>

    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/red"
        android:gravity="center"
        android:layout_below="@+id/toolbar"
        android:id="@+id/linearLayout22"
        android:measureWithLargestChild="false"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/offline_mode"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_gravity="center"
            android:textColor="@color/white" />
    </LinearLayout>


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true" />

    <LinearLayout
    android:id="@+id/layout_no_messages"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    android:background="@android:color/white"
    android:padding="40dp"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/menu_messaging"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/message_no_messgae" />



     </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_loading_messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@android:color/white"
        android:padding="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/message_loading_messgae" />



    </LinearLayout>


</RelativeLayout>
